@@ -43,6 +43,16 @@ noproxy =
 ; Override or send User-Agent header on client's behalf
 useragent =
 
+; Authentication to use when SSPI is unavailable. Format is domain\username
+; Service name "Px" and this username are used to retrieve the password using
+; Python keyring. Px only retrieves credentials and storage should be done
+; directly in the keyring backend.
+;   On Windows, Credential Manager is the backed and can be accessed from
+;   Control Panel > User Accounts > Credential Manager > Windows Credentials.
+;   Create a generic credential with Px as the network address, this username
+;   and corresponding password.
+username =
+
 [settings]
 
 ; Number of parallel workers (processes)
